[gd_scene format=3 uid="uid://bkmyv16s6vet7"]

[ext_resource type="Theme" uid="uid://o8kv76gc47gd" path="res://UI/StandardUITheme.tres" id="1_hat8c"]
[ext_resource type="Script" uid="uid://b463c404olsqm" path="res://UI/ItemSlot.gd" id="1_jgypo"]
[ext_resource type="Script" uid="uid://b0xeuufp3415x" path="res://UI/inventory_slots.gd" id="1_pis6k"]
[ext_resource type="Script" uid="uid://ccks2ifejhf3j" path="res://UI/health_bar.gd" id="2_4fiuh"]
[ext_resource type="Script" uid="uid://c7aba7ewofjby" path="res://UI/item_tool_tip.gd" id="2_jgypo"]
[ext_resource type="Script" uid="uid://0opev22hgi2d" path="res://UI/InteractPrompt.gd" id="8_cbfhl"]
[ext_resource type="Script" uid="uid://cmxii7ve0rsw7" path="res://UI/tell_player.gd" id="10_h81ot"]

[node name="UI" type="CanvasLayer" unique_id=1354259346]
process_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1447832038]
anchors_preset = -1
anchor_right = 0.238
anchor_bottom = 1.008
offset_right = -0.17599487
offset_bottom = -355.18402
theme = ExtResource("1_hat8c")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1414709530]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer" unique_id=589663766]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
max_value = 10.0
value = 10.0
rounded = true
show_percentage = false
script = ExtResource("2_4fiuh")

[node name="InventorySlots" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=140108738]
layout_mode = 2
script = ExtResource("1_pis6k")

[node name="ItemSlots" type="TextureRect" parent="MarginContainer/VBoxContainer/InventorySlots" unique_id=43706017]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
script = ExtResource("1_jgypo")

[node name="ItemSlots2" type="TextureRect" parent="MarginContainer/VBoxContainer/InventorySlots" unique_id=243921884]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
script = ExtResource("1_jgypo")

[node name="ItemSlots3" type="TextureRect" parent="MarginContainer/VBoxContainer/InventorySlots" unique_id=175470099]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
script = ExtResource("1_jgypo")

[node name="ItemSlots4" type="TextureRect" parent="MarginContainer/VBoxContainer/InventorySlots" unique_id=724958707]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
script = ExtResource("1_jgypo")

[node name="ItemSlots5" type="TextureRect" parent="MarginContainer/VBoxContainer/InventorySlots" unique_id=623051990]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
script = ExtResource("1_jgypo")

[node name="ItemSlots6" type="TextureRect" parent="MarginContainer/VBoxContainer/InventorySlots" unique_id=1627285286]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
script = ExtResource("1_jgypo")

[node name="ItemSlots7" type="TextureRect" parent="MarginContainer/VBoxContainer/InventorySlots" unique_id=874011455]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
script = ExtResource("1_jgypo")

[node name="ItemSlots8" type="TextureRect" parent="MarginContainer/VBoxContainer/InventorySlots" unique_id=554679568]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
script = ExtResource("1_jgypo")

[node name="ItemSlots9" type="TextureRect" parent="MarginContainer/VBoxContainer/InventorySlots" unique_id=1231521427]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
script = ExtResource("1_jgypo")

[node name="ItemSlots10" type="TextureRect" parent="MarginContainer/VBoxContainer/InventorySlots" unique_id=1543121174]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
script = ExtResource("1_jgypo")

[node name="ItemSlots11" type="TextureRect" parent="MarginContainer/VBoxContainer/InventorySlots" unique_id=373057239]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
script = ExtResource("1_jgypo")

[node name="ItemToolTip" type="PanelContainer" parent="." unique_id=849761547]
unique_name_in_owner = true
offset_left = 56.0
offset_top = 96.0
offset_right = 193.0
offset_bottom = 170.0
size_flags_vertical = 0
theme = ExtResource("1_hat8c")
script = ExtResource("2_jgypo")

[node name="MarginContainer" type="MarginContainer" parent="ItemToolTip" unique_id=439997874]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ItemToolTip/MarginContainer" unique_id=1950468538]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ItemNameLabel" type="Label" parent="ItemToolTip/MarginContainer/VBoxContainer" unique_id=2040352474]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Label"

[node name="ItemDescriptionLabel" type="Label" parent="ItemToolTip/MarginContainer/VBoxContainer" unique_id=718494094]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "descriptioon"

[node name="ChargeLabel" type="Label" parent="ItemToolTip/MarginContainer/VBoxContainer" unique_id=1333108340]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "charge"

[node name="ActivityLabel" type="Label" parent="ItemToolTip/MarginContainer/VBoxContainer" unique_id=1742712278]
unique_name_in_owner = true
layout_mode = 2

[node name="InteractPompt" type="Label" parent="." unique_id=559736845]
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("1_hat8c")
script = ExtResource("8_cbfhl")

[node name="TellPlayer" type="RichTextLabel" parent="." unique_id=1669669793]
unique_name_in_owner = true
anchors_preset = -1
anchor_right = 1.0020001
anchor_bottom = 0.37500003
offset_right = -0.30407715
offset_bottom = 9.999985
theme_override_font_sizes/normal_font_size = 25
fit_content = true
script = ExtResource("10_h81ot")
